2005-11-21  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JViewport.java
	(static_initializer): Initialize the defaultScrollMode here.
	(JViewport): Set the defaultScrollMode that was initialized in
	the static initializer.

2005-11-21  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JTable.java
	(columnAtPoint): Removed unused code.
	(rowAtPoint): Removed unused code.
	(prepareRenderer): Moved renderer prepare code from the UI to this
	method.
	(getSelections): Removed unused code.
	* javax/swing/plaf/basic/BasicTableUI.java
	(paintCell): Call JTable.prepareRenderer instead of preparing
	the renderer in the UI.
	(paint): Removed some unused code.

2005-11-21  Jan Roehrich  <jan@roehrich.info>

	* java/awt/datatransfer/DataFlavor.java: fixed code 
	formatting issues

2005-11-20  Chris Burdess  <dog@gnu.org>

	* gnu/xml/transform/TransformerImpl.java: Ensure that output stream
	is not closed if provided in the StreamResult.

2005-11-19  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* AUTHORS: Added myself.

2005-11-19  Wolfgang Baer  <WBaer@gmx.de>

	* javax/print/attribute/Size2DSyntax.java: 
	Added and enhanced api docs for this class.
	(toString()): Changed to return values as ints.
	(toString(int,String)): Changed to not append the unitsName if null.

2005-11-19  Wolfgang Baer  <WBaer@gmx.de>

	* javax/print/attribute/ResolutionSyntax.java (toString):
	Changed to not append the unitsName if null. Clarified api docs.

2005-11-19  Wolfgang Baer  <WBaer@gmx.de>

	* javax/print/attribute/TextSyntax.java:
	Added and enhanced api docs for this class.
	(TextSyntax): If locale is null use the default locale.

2005-11-19  Wolfgang Baer  <WBaer@gmx.de>

	* javax/print/attribute/SetOfIntegerSyntax.java: 
	Added and enhanced api docs for this class.	
	(SetOfIntegerSyntax(String)): Create empty set if given string is null.

2005-11-19  Wolfgang Baer  <WBaer@gmx.de>

	* javax/print/attribute/ResolutionSyntax.java:
	Added and enhanced api docs for this class.